# swh-search

./: .copier-answers.yml  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AUTHORS  CONTRIBUTORS  Makefile.local  PKG-INFO  README.md  README.rst  conftest.py  hatch_build.py  mypy.ini  package.json  pyproject.toml  requirements-swh.txt  requirements-test.txt  requirements.txt  setup.py  swh-search_0.0.3.orig.tar.gz.delta  swh-search_0.0.3.orig.tar.gz.id  swh-search_0.0.4.orig.tar.gz.delta  swh-search_0.0.4.orig.tar.gz.id  swh-search_0.1.0.orig.tar.gz.delta  swh-search_0.1.0.orig.tar.gz.id  swh-search_0.10.0.orig.tar.gz.delta  swh-search_0.10.0.orig.tar.gz.id  swh-search_0.11.0.orig.tar.gz.delta  swh-search_0.11.0.orig.tar.gz.id  swh-search_0.11.1.orig.tar.gz.delta  swh-search_0.11.1.orig.tar.gz.id  swh-search_0.11.2.orig.tar.gz.delta  swh-search_0.11.2.orig.tar.gz.id  swh-search_0.11.3.orig.tar.gz.delta  swh-search_0.11.3.orig.tar.gz.id  swh-search_0.11.4.orig.tar.gz.delta  swh-search_0.11.4.orig.tar.gz.id  swh-search_0.11.5.orig.tar.gz.delta  swh-search_0.11.5.orig.tar.gz.id  swh-search_0.11.6.orig.tar.gz.delta  (+77 more)
debian/: changelog  control  rules
docs/: cli.rst  index.rst  query-language.rst
es_config/: elasticsearch.keystore  elasticsearch.yml  jvm.options
query_language/: build.py  grammar.js  sample_query
query_language/test/corpus/: combinations.txt
swh/: __init__.py
swh.search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
swh/search/: __init__.py  cli.py  elasticsearch.py  exc.py  in_memory.py  interface.py  journal_client.py  metrics.py  query_language_binding.pyi  translator.py  utils.py
swh/search/api/: client.py  server.py
swh/search/query_language/: .gitignore  grammar.js  query_language_binding.c  sample_query  tokens.js
swh/search/query_language/src/: grammar.json  node-types.json  parser.c
swh/search/query_language/test/corpus/: combinations.txt
swh/search/static/: swh_ql.wasm
swh/search/tests/: conftest.py  test_api_client.py  test_cli.py  test_elasticsearch.py  test_in_memory.py  test_init.py  test_journal_client.py  test_search.py  test_server.py  test_translator.py  test_utils.py
