[project]
name = "swh.search"
authors = [
    { name = "Software Heritage developers", email = "swh-devel@inria.fr" },
]

description = "Software Heritage search service"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.entry-points."swh.cli.subcommands"]
"swh.search" = "swh.search.cli"

[project.urls]
"Homepage" = "https://gitlab.softwareheritage.org/swh/devel/swh-search"
"Bug Reports" = "https://gitlab.softwareheritage.org/swh/devel/swh-search/-/issues"
"Funding" = "https://www.softwareheritage.org/donate"
"Documentation" = "https://docs.softwareheritage.org/devel/swh-search/"
"Source" = "https://gitlab.softwareheritage.org/swh/devel/swh-search.git"

[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs", "hatch-cpp"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt", "requirements-swh.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
testing = ["requirements-test.txt"]

[tool.hatch.build.targets.wheel]
packages = ["swh"]

[tool.hatch.build.hooks.custom]

[tool.hatch.build.hooks.hatch-cpp]
libraries = [
    { name = "swh/search/static/swh_ql", sources = [
        "swh/search/query_language/src/parser.c",
    ], include_dirs = [
        "swh/search/query_language/src",
    ], binding = "generic", language = "c", std = "c11" },
]

[tool.hatch.build.targets.sdist]
exclude = ["swh/search/static"]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1"

[tool.cibuildwheel]
build = "*manylinux*"
skip = "cp*t-*"

[[tool.cibuildwheel.overrides]]
select = "*manylinux*"
before-build = "until yum -y install yarnpkg; do sleep 1; done"

[tool.black]
target-version = ['py311', 'py312', 'py313']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
force_sort_within_sections = true
known_first_party = ['swh']

[tool.mypy]
namespace_packages = true
warn_unused_ignores = true
explicit_package_bases = true
# ^ Needed for mypy to detect py.typed from swh packages installed
# in editable mode

plugins = []

# 3rd party libraries without stubs (yet)
# [[tool.mypy.overrides]]
# module = [
#     "package1.*",
#     "package2.*",
# ]
# ignore_missing_imports = true

[tool.flake8]
select = ["C", "E", "F", "W", "B950"]
ignore = [
    "E203", # whitespaces before ':' <https://github.com/psf/black/issues/315>
    "E231", # missing whitespace after ','
    "E501", # line too long, use B950 warning from flake8-bugbear instead
    "W503", # line break before binary operator <https://github.com/psf/black/issues/52>
]
max-line-length = 88
extend-exclude = ["build/"]

[tool.pytest.ini_options]
norecursedirs = "build docs .*"
consider_namespace_packages = true
